--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,54 +1,67 @@
 version: 2.1
 
 orbs:
-  android: circleci/android@2.5.0  # Gunakan versi terbaru
-
-executors:
-  android-executor:
-    docker:
-      - image: cimg/android:2023.12  # Image terbaru dengan support AGP 8.x & Gradle 8.x
-    environment:
-      GRADLE_OPTS: "-Dorg.gradle.daemon=false"
-      JAVA_OPTS: "-Xmx4096m"
+  android: circleci/android@3.1.0
 
 jobs:
   build:
-    executor: android-executor
+    docker:
+      - image: cimg/android:2025.02
+    environment:
+      GRADLE_VERSION: 8.9
+      GRADLE_HOME: ~/gradle
+
     steps:
       - checkout
-      - restore_cache:
-          key: android-deps-v1-{{ checksum "build.gradle" }}-{{ checksum "app/build.gradle" }}
+
       - run:
-          name: Chmod permissions
-          command: chmod +x ./gradlew
+          name: Setup API Key
+          command: echo "TMDB_API_KEY=${TMDB_API_KEY}" > local.properties
+
+      - restore_cache:
+          key: android-orb-v1-{{ checksum "app/build.gradle.kts" }}
+
       - run:
           name: Install Gradle 8.9
           command: |
-            wget https://services.gradle.org/distributions/gradle-8.9-bin.zip -P /tmp
-            unzip -d /opt/gradle /tmp/gradle-8.9-bin.zip
-            echo 'export PATH=/opt/gradle/gradle-8.9/bin:$PATH' >> $BASH_ENV
+            mkdir -p $GRADLE_HOME
+            wget -q https://services.gradle.org/distributions/gradle-${GRADLE_VERSION}-bin.zip -O /tmp/gradle.zip
+            unzip -qo /tmp/gradle.zip -d $GRADLE_HOME
+            echo "export PATH=$GRADLE_HOME/gradle-${GRADLE_VERSION}/bin:\$PATH" >> $BASH_ENV
+            source $BASH_ENV
+            gradle -v
+
       - run:
-          name: Verify Gradle Version
-          command: gradle -v
+          name: Chmod permissions
+          command: chmod +x ./gradlew
+
       - run:
           name: Download Dependencies
           command: ./gradlew androidDependencies
+
       - save_cache:
-          key: android-deps-v1-{{ checksum "build.gradle" }}-{{ checksum "app/build.gradle" }}
+          key: android-orb-v1-{{ checksum "app/build.gradle.kts" }}
           paths:
             - ~/.gradle/caches
             - ~/.gradle/wrapper
+            - ~/.android/cache
+
       - run:
           name: Run Build
-          command: ./gradlew assembleDebug
+          command: ./gradlew build
+
       - store_artifacts:
           path: app/build/reports
           destination: reports
+
       - run:
           name: Run Tests
           command: ./gradlew lint test
+
       - store_test_results:
           path: app/build/test-results
+
       - store_artifacts:
           path: app/build/outputs/apk/debug/
-          destination: debug-apks
+          destination: artifact-file
+    executor:
