--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,30 +1,30 @@
 [versions]
-agp = "8.7.3"
+agp = "8.9.2"
 androidDatabaseSqlcipherVersion = "4.5.4"
 koinAndroid = "3.5.6"
-kotlin = "2.0.0"
-coreKtx = "1.15.0"
+kotlin = "2.1.20"
+coreKtx = "1.16.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 appcompat = "1.7.0"
 leakcanaryAndroid = "2.11"
 material = "1.12.0"
-activity = "1.10.0"
-constraintlayout = "2.2.0"
+activity = "1.10.1"
+constraintlayout = "2.2.1"
 materialsearchbar = "0.8.5"
-room = "2.6.1"
+room = "2.7.1"
 retrofit = "2.11.0"
 loggingInterceptor = "4.12.0"
 kotlinxCoroutines = "1.8.1"
 glide = "4.16.0"
-ksp = "2.0.10-1.0.24"
-lifecycle = "2.8.7"
-navigationFragmentKtx = "2.8.7"
-navigationUiKtx = "2.8.7"
+ksp = "2.1.20-RC3-1.0.31"
+lifecycle = "2.9.0"
+navigationFragmentKtx = "2.9.0"
+navigationUiKtx = "2.9.0"
 lifecycleExtensions = "2.2.0"
 espressoIdlingResource = "3.6.1"
-sqlite = "2.4.0"
+sqlite = "2.5.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
