--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,8 +24,18 @@
         android:theme="@style/Theme.MubeeGo"
         tools:targetApi="31">
         <activity
+            android:name=".ui.SplashActivity"
+            android:exported="true"
+            android:theme="@style/Theme.MubeeGo">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".ui.main.MainNavigation"
-            android:exported="false" />
+            android:exported="true"
+            android:theme="@style/Base.Theme.MubeeGo" />
 
         <meta-data
             android:name="com.google.android.gms.games.APP_ID"
@@ -37,16 +47,6 @@
         <activity
             android:name=".ui.authentication.AuthActivity"
             android:exported="false" />
-        <activity
-            android:name=".ui.SplashActivity"
-            android:exported="true"
-            android:theme="@style/SplashTheme">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
 
         <receiver android:name=".ui.moviedetail.ReminderReceiver" />
         <service android:name="androidx.core.app.JobIntentService" />
